# news-bias

./: .gitignore  README.md  news_bias_finetune_distilbert_bias (1).ipynb  news_bias_finetune_distilbert_bias.ipynb  pyproject.toml
results/: bias_analysis_20250814_154049.csv  bias_analysis_20250814_154301.csv  bias_analysis_20250814_155204.csv  bias_analysis_20250814_160128.csv
src/news_bias/: __init__.py  __main__.py  analyzer.py  pipeline.py  scraper.py
