[project]
name = "news-bias"
version = "0.1.0"
description = "News bias detection using DistilBERT"
authors = [
    {name = "Pablo Watfi",email = "pablowatfi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "transformers>=4.31.0",
    "torch>=2.0.0",
    "numpy<2.0.0",
    "typing-extensions>=4.7.1",
    "sacremoses>=0.0.53",
    "fake-useragent>=1.1.1",
    "urllib3>=2.0.3",
    "cloudscraper>=1.2.71"
]

[tool.poetry]
packages = [{include = "news_bias", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
